[package]
name = "oreutils"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
which = "2.0.1"
regex = "1.1.5"
semver = {version = "0.9.0", features = ["serde"]}
serde = "1.0.90"
serde_json = "1.0.39"
env_proxy = "0.3.0"
reqwest = "0.9.15"
serde_derive = "1.0.90"
